Colab을 통해 생성됨

--- a/14강_실습(원본).ipynb
+++ b/14강_실습(원본).ipynb
@@ -61,13 +61,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": 45,
       "metadata": {
         "id": "AXszvhGpqkw0",
-        "outputId": "c1f69144-640e-46e1-d661-dde6a47a8c3a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "eed8563c-5917-40c1-de0b-a055a1c810d1"
       },
       "outputs": [
         {
@@ -77,74 +77,59 @@
             "* * * \n",
             "* * * \n",
             "* * * \n",
-            "컴퓨터 차례 입니다.\n",
+            "사용자 차례 입니다.\n",
             "* * * \n",
             "* * * \n",
             "* * * \n",
-            "컴퓨터가 행 3, 열1을/를 선택했습니다.\n",
+            "선택할 빈칸의 위치를 입력하세요: 1 1\n",
+            "사용자가 행 1, 열1을/를 선택했습니다.\n",
             "\n",
+            "O * * \n",
             "* * * \n",
             "* * * \n",
-            "X * * \n",
             "컴퓨터 차례 입니다.\n",
+            "O * * \n",
             "* * * \n",
             "* * * \n",
-            "X * * \n",
-            "컴퓨터가 행 2, 열1을/를 선택했습니다.\n",
-            "\n",
-            "* * * \n",
-            "X * * \n",
-            "X * * \n",
-            "컴퓨터 차례 입니다.\n",
-            "* * * \n",
-            "X * * \n",
-            "X * * \n",
-            "컴퓨터가 행 2, 열2을/를 선택했습니다.\n",
-            "\n",
-            "* * * \n",
-            "X X * \n",
-            "X * * \n",
-            "컴퓨터 차례 입니다.\n",
-            "* * * \n",
-            "X X * \n",
-            "X * * \n",
-            "컴퓨터가 행 1, 열2을/를 선택했습니다.\n",
-            "\n",
-            "* X * \n",
-            "X X * \n",
-            "X * * \n",
-            "컴퓨터 차례 입니다.\n",
-            "* X * \n",
-            "X X * \n",
-            "X * * \n",
             "컴퓨터가 행 2, 열3을/를 선택했습니다.\n",
             "\n",
-            "* X * \n",
-            "X X X \n",
-            "X * * \n",
+            "O * * \n",
+            "* * X \n",
+            "* * * \n",
+            "사용자 차례 입니다.\n",
+            "O * * \n",
+            "* * X \n",
+            "* * * \n",
+            "선택할 빈칸의 위치를 입력하세요: 2 2\n",
+            "사용자가 행 2, 열2을/를 선택했습니다.\n",
+            "\n",
+            "O * * \n",
+            "* O X \n",
+            "* * * \n",
             "컴퓨터 차례 입니다.\n",
-            "* X * \n",
-            "X X X \n",
-            "X * * \n",
-            "컴퓨터가 행 3, 열3을/를 선택했습니다.\n",
+            "O * * \n",
+            "* O X \n",
+            "* * * \n",
+            "컴퓨터가 행 1, 열2을/를 선택했습니다.\n",
             "\n",
-            "* X * \n",
-            "X X X \n",
-            "X * X \n",
-            "컴퓨터 차례 입니다.\n",
-            "* X * \n",
-            "X X X \n",
-            "X * X \n",
-            "컴퓨터가 행 1, 열1을/를 선택했습니다.\n",
+            "O X * \n",
+            "* O X \n",
+            "* * * \n",
+            "사용자 차례 입니다.\n",
+            "O X * \n",
+            "* O X \n",
+            "* * * \n",
+            "선택할 빈칸의 위치를 입력하세요: 3 3\n",
+            "사용자가 행 3, 열3을/를 선택했습니다.\n",
             "\n",
-            "X X * \n",
-            "X X X \n",
-            "X * X \n",
-            "컴퓨터가 이겼습니다. 다시도전하세요.\n",
+            "O X * \n",
+            "* O X \n",
+            "* * O \n",
+            "사용자가 이겼습니다. 축하합니다.\n",
             "\n",
-            "X X * \n",
-            "X X X \n",
-            "X * X \n"
+            "O X * \n",
+            "* O X \n",
+            "* * O \n"
           ]
         }
       ],
@@ -181,9 +166,9 @@
         "        for i in range(n) :\n",
         "            win = True\n",
         "            for j in range(n) :\n",
-        "                  self.board[i][j] != player\n",
-        "                  win = False\n",
-        "                  break\n",
+        "                  if self.board[i][j] != player :\n",
+        "                    win = False\n",
+        "                    break\n",
         "            if win == True :\n",
         "                return win\n",
         "\n",
@@ -191,9 +176,9 @@
         "        for i in range(n) :\n",
         "            win = True\n",
         "            for j in range(n) :\n",
-        "                  self.board[j][i] != player\n",
-        "                  win = False\n",
-        "                  break\n",
+        "                  if self.board[j][i] != player :\n",
+        "                    win = False\n",
+        "                    break\n",
         "            if win == True :\n",
         "                return win\n",
         "\n",
@@ -218,7 +203,6 @@
         "                win = False\n",
         "                break\n",
         "        if win == True :\n",
-        "\n",
         "            return win\n",
         "\n",
         "        return False\n",
@@ -233,7 +217,7 @@
         "\n",
         "    # 플레이어 변경\n",
         "    def next_player(self, player):\n",
-        "        if player =='O' :\n",
+        "        if player == 'O' :\n",
         "            return 'X'\n",
         "        else :\n",
         "            return 'O'\n",
@@ -263,7 +247,7 @@
         "\n",
         "          # 게임 루프 시작\n",
         "          while True:\n",
-        "\n",
+        "            #다음 플레이어 안내\n",
         "            if player == 'X' :\n",
         "                print(\"컴퓨터 차례 입니다.\")\n",
         "            else :\n",
@@ -303,13 +287,13 @@
         "\n",
         "              break\n",
         "\n",
-        "              # 게임판이 가득참 확인, 빈칸 여부 확인\n",
-        "              if self.is_board_full() == True:\n",
-        "                  print(\"무승부입니다. 다시도전하세요.\")\n",
-        "                  break\n",
+        "            # 게임판이 가득참 확인, 빈칸 여부 확인\n",
+        "            if self.is_board_full() == True:\n",
+        "                print(\"무승부입니다. 다시도전하세요.\")\n",
+        "                break\n",
         "\n",
-        "              # 플레이어 변경\n",
-        "              player = self.next_player(player)\n",
+        "            # 플레이어 변경\n",
+        "            player = self.next_player(player)\n",
         "\n",
         "          # 최종 게임판 출력\n",
         "          print()\n",
